# common

./: CMakeLists.txt  CMakeLists.txt.ori  CMx_CoreDebug.h  README.md  cmake_install.cmake  cmake_install.cmake.ori  common-vars.c  definitions.h  errors_events.c  errors_events.h  options.c  options.h  stdioX.c  stdioX.h  struct_union.h  template.h  terminalX.c  terminalX.h  timeX.c  timeX.h  utilitiesX.c  utilitiesX.h  x_builddefs.h  x_debug.h  x_definitions.h  x_errors_events.c  x_errors_events.h  x_stdio.c  x_stdio.h  x_struct_union.h  x_terminal.c  x_terminal.h  x_time.c  x_time.h  x_utilities.c  x_utilities.h
include/: builddefs.h  common-vars.h  definitions.h  errors_events.h  stdioX.h  struct_union.h  terminalX.h  timeX.h  utilitiesX.h
priv/: options_appl.h
src/: common-vars.c  errors_events.c  stdioX.c  template.c  timeX.c  utilitiesX.c
sys/: custom_file.h  x_flags.h  x_toolchain.h
